<resources>
    <string name="app_name">AlphaBetter</string>
    <string name="quiz_button_string">Start Quiz</string>
    <string name="choice1_string">Choice 1</string>
    <string name="choice2_string">Choice 2</string>
    <string name="choice3_string">Choice 3</string>
    <string name="choice4_string">Choice 4</string>
    <string name="question_string">Question</string>
    <string name="score_string">--</string>
    <string name="result_string">Result</string>
    <string name="question_number_string">--/--</string>
    <string name="prompt_string">Select correct -- letter</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="lives_string">--</string>
    <string name="timer_string">Seconds left: --</string>
    <string name="russian_quiz_button_string">Start Russian Quiz</string>
    <string name="greek_quiz_button_string">Start Greek Quiz</string>
    <string name="target_letter_string">Ф, ф</string>
    <string name="known_letter_string">f</string>
    <string name="learn_russian_string">Learn Russian Alphabet</string>
    <string name="learn_greek_string">Learn Greek Alphabet</string>
    <string name="next_string">Next</string>
    <string name="previous_string">Previous</string>
    <string name="practice_string">Practice tracing the letters below!</string>
    <string name="clear_string">Clear Drawing</string>
    <string name="progress_string">--/--</string>
    <string name="Title">αlphaБetter</string>
    <string name="russian_string">Russian</string>
    <string name="greek_string">Greek</string>
    <string name="quiz_mode_string">Quiz mode:</string>
    <string name="learn_mode_string">Learn mode:</string>
    <string name="armenian_string">Armenian</string>
</resources>
