<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context="com.example.yana.alphabetter.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="361dp"
        android:layout_height="71dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/Title"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.018" />

    <TextView
        android:id="@+id/quizText"
        android:layout_width="190dp"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/quiz_mode_string"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="@+id/russian_quiz_button"
        app:layout_constraintHorizontal_bias="0.427"
        app:layout_constraintStart_toStartOf="@+id/russian_quiz_button"
        app:layout_constraintTop_toBottomOf="@+id/learn_armenian_button" />

    <TextView
        android:id="@+id/learnText"
        android:layout_width="190dp"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/learn_mode_string"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/russian_quiz_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_round"
        android:onClick="startRussianQuiz"
        android:text="@string/russian_string"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/greek_quiz_button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/greek_quiz_button"
        app:layout_constraintTop_toBottomOf="@+id/quizText" />

    <Button
        android:id="@+id/greek_quiz_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_round"
        android:onClick="startGreekQuiz"
        android:text="@string/greek_string"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/armenian_quiz_button"
        app:layout_constraintStart_toStartOf="@+id/armenian_quiz_button"
        app:layout_constraintTop_toBottomOf="@+id/russian_quiz_button" />

    <Button
        android:id="@+id/learn_russian_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_round"
        android:onClick="startLearnRussian"
        android:text="@string/russian_string"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/learn_greek_button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/learn_greek_button"
        app:layout_constraintTop_toBottomOf="@+id/learnText" />

    <Button
        android:id="@+id/learn_greek_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_round"
        android:onClick="startLearnGreek"
        android:text="@string/greek_string"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/learn_armenian_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/learn_armenian_button"
        app:layout_constraintTop_toBottomOf="@+id/learn_russian_button" />

    <Button
        android:id="@+id/learn_armenian_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_round"
        android:onClick="startLearnArmenian"
        android:text="Armenian"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/learn_greek_button" />

    <Button
        android:id="@+id/armenian_quiz_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_round"
        android:onClick="startArmenianQuiz"
        android:text="Armenian"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greek_quiz_button" />
</android.support.constraint.ConstraintLayout>